# EGAGame

./: .gitignore  .gitmodules  B2.BAT  BPC.CFG  FIXED.PAS  app.pas  b.bat  build_fpc.sh  dbcom1.bat  ega.pas  font.ega  fpc.cfg  gamedata.pas  level.pas  meson.build  neo_engine.h  player.ega  ptop.cfg  requirements.txt  sprite3.ega  tcc.cfg  test.asm  tile.ega
data/: cursor.ega  font.ega  gold.ega  monster.ega  monster2.ega  moveto0.ega  moveto1.ega  moveto2.ega  player.ega  player2.ega  player3.ega  player4.ega  player5.ega  player6.ega  sprite.ega  sprite2.ega  swipe.ega
dev/: TODO.md  entity_info.csv  entity_states.csv  monster.aseprite  monster2.aseprite  player.aseprite  player.json  player2.aseprite
src/: app.c  app.pas  common.h  common.pas  ega.c  ega.pas  entity.c  entity.pas  fixed.pas  gamedata.pas  item.c  level.c  level.pas  monster.c  move.c  neo.c  player.c  player.pas  test.asm  trace.c  trace.pas  util.c
src/res/: res.c  res.h  res.pas
tools/: fixed.py  process_entity_info.py  process_states.py  processlib.py  res.py
